# Learning

./: .gitignore
advent_of_code_2024/src/main/kotlin/: 01_distances.kt  02_safety.kt  03_memory_corruption_mul.kt  04_xmas_search.kt
advent_of_code_2024/src/main/resources/: 021.txt
hackerrank/: CMakeLists.txt  main.cpp
hackerrank/Google_tests/: CMakeLists.txt  common_child_test.cpp  counting_inversions_test.cpp  fraudulent_activity_test.cpp  triplets_test.cpp  utils.cpp  utils.h
hackerrank/Google_tests/lib/: CMakeLists.txt
hackerrank/Google_tests/lib/googlemock/: CMakeLists.txt
hackerrank/Google_tests/lib/googletest/: CMakeLists.txt
hackerrank/Google_tests/resources/: common_child_test_custom_input.txt  counting_inversions_large_descending_input.txt
hackerrank/hackerrank_lib/: CMakeLists.txt  common_child.cpp  common_child.h  counting_inversions.cpp  counting_inversions.h  fradulent_activity.h  fraudulent_activity.cpp  frequency_queries.cpp  frequency_queries.h  triplets.cpp  triplets.h
